# photon

./: .gitignore  Cargo.toml  README.md  blender_ray_exporter.py  rustfmt.toml
examples/: colortest.blend  cube.blend  cube.blend.json  cube.dae  cube_lighted_by_mirror.blend  cube_transparent.blend  cube_transparent.blend.json  cube_transparent.dae  cubes_and_sphere.dae  materials.blend  materials.blend.json  materials.blend1  materials.dae  metallic_specular.blend  metallic_specular1.blend  sources.txt  sphere_between_mirrors.blend  sphere_between_mirrors.blend.json  sphere_between_mirrors.dae  spheres.blend  textured_cube.blend
src/: bvh.rs  collada.rs  gui.rs  image_buffer.rs  main.rs  math.rs  scene.rs  simd.rs
src/import/: blender.rs  collada.rs  mod.rs
src/scene/: image.rs  mod.rs  scene.rs
src/scene/nodes/: bsdf_principled.rs  graph.rs  mod.rs  output_material.rs  tex_image.rs
src/tracing/: bvh.rs  mod.rs  raytracer.rs  rendering.rs
