[package]
name = "photon"
version = "0.1.0"
authors = ["Michael", "Patrick"]
edition = "2018"
description = "Traces rays!"

[dependencies]
# Command line
clap = "2.33.0"
num_cpus = "1.10.1"

# GUI
minifb = "0.12"

# Output
png = "0.15.0"

# Math
vecmath = "1.0.0"

# Parsing
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
serde_json = "1.0.40"
serde = { version = "1.0.99", features = ["derive"] }
flate2 = "1.0.11"
