[package]
name = "photon"
version = "0.1.0"
authors = ["Michael", "Patrick"]
edition = "2018"
description = "Traces rays!"

[dependencies]
# Command line
clap = "2.33.0"
num_cpus = "1.10.1"

# GUI
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
gl = "0.13.0"

# Output
png = "0.15.0"

# Math
vecmath = "1.0.0"
rand = "0.7.0"
rand_pcg = "0.2.0"

# Parsing
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
serde_json = "1.0.40"
serde = { version = "1.0.99", features = ["derive"] }
